@@ -3388,12 +3388,13 @@ link_info_done (NautilusDirectory *directory,
 	nautilus_file_set_display_name (file, name, name, TRUE);
 	
 	file->details->got_link_info = TRUE;
-	if (file->details->activation_location) {
-		g_object_unref (file->details->activation_location);
-		file->details->activation_location = NULL;
-	}
 	g_free (file->details->custom_icon);
 	if (uri) {
+		if (file->details->activation_location) {
+			g_object_unref (file->details->activation_location);
+			file->details->activation_location = NULL;
+		}
+		file->details->got_custom_activation_location = TRUE;
 		file->details->activation_location = g_file_new_for_uri (uri);
 	}
 	file->details->custom_icon = g_strdup (icon);
